z-index preview to prevent unwanted clickthrough

--- a/client/src/Components/AdminForms/AdminForms.scss
+++ b/client/src/Components/AdminForms/AdminForms.scss
@@ -12,6 +12,7 @@
       align-items: center;
       justify-content: center;
       position: absolute;
+      z-index: 10;
       top: -95px;
       left: -80px;
       margin: 20px;
